--- a/Billing/DataContext/Billing.DAL.csproj
+++ b/Billing/DataContext/Billing.DAL.csproj
@@ -51,10 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\InvoiceContext.cs" />
-    <Compile Include="Context\PersonContext.cs" />
+    <Compile Include="Context\Data.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Context\RolesContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
