--- a/Billing/WebApplication1/Billing.UI.csproj
+++ b/Billing/WebApplication1/Billing.UI.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -237,8 +238,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Role\Index.cshtml" />
     <Content Include="Views\Invoice\Index.cshtml" />
+    <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\CreateCustomer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -255,6 +258,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Billing.BLL\Billing.BLL.csproj">
+      <Project>{6f3f24f8-b881-4656-a2aa-409823e2fb92}</Project>
+      <Name>Billing.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataContext\Billing.DAL.csproj">
+      <Project>{95c99b72-1be9-4e5e-9ba9-17d157965eb7}</Project>
+      <Name>Billing.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\Billing.DTO.csproj">
+      <Project>{62ec15ff-ba97-454d-b1aa-2bdaba5c719f}</Project>
+      <Name>Billing.DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
