--- a/Billing/Billing.BLL/Billing.BLL.csproj
+++ b/Billing/Billing.BLL/Billing.BLL.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLL.cs" />
+    <Compile Include="CustomerBLL.cs" />
+    <Compile Include="InvoiceBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
