--- a/Billing/Billing.BLL/Billing.BLL.csproj
+++ b/Billing/Billing.BLL/Billing.BLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
+    <Compile Include="DetailLineBLL.cs" />
     <Compile Include="InvoiceBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
