--- a/Billing/DataContext/Billing.DAL.csproj
+++ b/Billing/DataContext/Billing.DAL.csproj
@@ -56,16 +56,28 @@
     <Compile Include="Configurations\InvoiceConfiguration.cs" />
     <Compile Include="Configurations\VatConfiguration.cs" />
     <Compile Include="Context\Data.cs" />
+    <Compile Include="Exeptions\AllFieldReaquiredExeption.cs" />
+    <Compile Include="Exeptions\CanNotRemoveExeption.cs" />
     <Compile Include="Exeptions\NotExistExeption.cs" />
     <Compile Include="IData.cs" />
-    <Compile Include="Migrations\201910181214486_Initial.cs" />
-    <Compile Include="Migrations\201910181214486_Initial.designer.cs">
-      <DependentUpon>201910181214486_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201910192003303_Initial.cs" />
+    <Compile Include="Migrations\201910192003303_Initial.designer.cs">
+      <DependentUpon>201910192003303_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910192042175_remove user.cs" />
+    <Compile Include="Migrations\201910192042175_remove user.designer.cs">
+      <DependentUpon>201910192042175_remove user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910211820583_AddFinished.cs" />
+    <Compile Include="Migrations\201910211820583_AddFinished.designer.cs">
+      <DependentUpon>201910211820583_AddFinished.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CustumerRepo.cs" />
+    <Compile Include="Repositories\DetailLineRepo.cs" />
+    <Compile Include="Repositories\CustomerRepo.cs" />
     <Compile Include="Repositories\InvoiceRepo.cs" />
+    <Compile Include="Repositories\VatRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -78,8 +90,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201910181214486_Initial.resx">
-      <DependentUpon>201910181214486_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910192003303_Initial.resx">
+      <DependentUpon>201910192003303_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910192042175_remove user.resx">
+      <DependentUpon>201910192042175_remove user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910211820583_AddFinished.resx">
+      <DependentUpon>201910211820583_AddFinished.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
