changes of invoice and detail line

--- a/Billing/Billing.BLL/Billing.BLL.csproj
+++ b/Billing/Billing.BLL/Billing.BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DetailLineBLL.cs" />
     <Compile Include="InvoiceBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VatBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataContext\Billing.DAL.csproj">
