--- a/Billing/Billing.BLL/Billing.BLL.csproj
+++ b/Billing/Billing.BLL/Billing.BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
     <Compile Include="DetailLineBLL.cs" />
+    <Compile Include="EmailConfig.cs" />
     <Compile Include="InvoiceBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VatBLL.cs" />
