--- a/Billing/WebApplication1/Billing.UI.csproj
+++ b/Billing/WebApplication1/Billing.UI.csproj
@@ -216,8 +216,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -253,6 +251,9 @@
     <Content Include="Views\DetailLine\Create.cshtml" />
     <Content Include="Views\Invoice\Details.cshtml" />
     <Content Include="Views\Invoice\Edit.cshtml" />
+    <Content Include="Views\DetailLine\Details.cshtml" />
+    <Content Include="Views\DetailLine\Edit.cshtml" />
+    <Content Include="Views\DetailLine\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
