--- a/Billing/DataContext/Billing.DAL.csproj
+++ b/Billing/DataContext/Billing.DAL.csproj
@@ -60,17 +60,9 @@
     <Compile Include="Exeptions\CanNotRemoveExeption.cs" />
     <Compile Include="Exeptions\NotExistExeption.cs" />
     <Compile Include="IData.cs" />
-    <Compile Include="Migrations\201910192003303_Initial.cs" />
-    <Compile Include="Migrations\201910192003303_Initial.designer.cs">
-      <DependentUpon>201910192003303_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910192042175_remove user.cs" />
-    <Compile Include="Migrations\201910192042175_remove user.designer.cs">
-      <DependentUpon>201910192042175_remove user.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910211820583_AddFinished.cs" />
-    <Compile Include="Migrations\201910211820583_AddFinished.designer.cs">
-      <DependentUpon>201910211820583_AddFinished.cs</DependentUpon>
+    <Compile Include="Migrations\202001030702199_Init.cs" />
+    <Compile Include="Migrations\202001030702199_Init.designer.cs">
+      <DependentUpon>202001030702199_Init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,14 +83,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201910192003303_Initial.resx">
-      <DependentUpon>201910192003303_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910192042175_remove user.resx">
-      <DependentUpon>201910192042175_remove user.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910211820583_AddFinished.resx">
-      <DependentUpon>201910211820583_AddFinished.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001030702199_Init.resx">
+      <DependentUpon>202001030702199_Init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
